--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "dependencies": {
     "d3": "3",
-    "d3.chart": "jugglinmike/d3.chart#amd-3",
+    "d3.chart": "~0.3.0",
     "d3-plugins-sankey": "1.2.1"
   },
   "devDependencies": {
