--- a/bower.json
+++ b/bower.json
@@ -33,11 +33,11 @@
   },
 
   "dependencies": {
-    "d3": "~3.5.6",
-    "d3-plugins-sankey": "1.0.0",
+    "d3": "3",
+    "d3-plugins-sankey": "~1.1.0",
     "d3.chart": "~0.3.0"
   },
   "resolutions": {
-    "d3": "~3.5.6"
+    "d3": "3"
   }
 }
